--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 
 	//JSR-330 Provider
 	implementation 'javax.inject:javax.inject:1'
+	implementation("jakarta.inject:jakarta.inject-api:2.0.1")
+
 
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
