--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	implementation 'javax.inject:javax.inject:1'
 	implementation("jakarta.inject:jakarta.inject-api:2.0.1")
 
+	//web 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
